[package]
name = "shellder-macros"
version = "0.1.5"
edition = "2021"
authors = ["Saugata Kundu <kundusaugata576@gmail.com>"]
description = "A lightweight, type-safe dependency injection and application framework for Rust inspired by Spring."
license = "Apache-2.0"
repository = "https://github.com/Kunta-tech/shellder-macros"
readme = "README.md"
keywords = ["dependency-injection", "framework", "ioc", "rust", "macros"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

